fix(account): override white-space to normal for footer links on mobile
Agent-Logs-Url: https://github.com/logto-io/logto/sessions/c71ac64d-38da-44cc-a4f1-a732dbe580ac

--- a/packages/account/src/components/PageFooter/index.module.scss
+++ b/packages/account/src/components/PageFooter/index.module.scss
@@ -54,5 +54,9 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: _.unit(1) _.unit(4);
+
+    a {
+      white-space: normal;
+    }
   }
 }
